--- a/TO-BDD/Pages/Index.razor
+++ b/TO-BDD/Pages/Index.razor
@@ -1,9 +1,41 @@
-﻿@page "/index"
+﻿@page "/"
+@using TO_BDD.Providers
+@using TO_BDD.Models
+@using TO_BDD.Services
+@inject NavigationManager _nav
+@inject LoginStateProvider _loginState
 
-<PageTitle>Index</PageTitle>
+<p>ksionszki</p>
 
-<h1>Hello, world!</h1>
+<MudTable Items="@Books" Hover="true" Breakpoint="Breakpoint.Sm" Loading="@_loading" LoadingProgressColor="Color.Info">
+    <HeaderContent>
+        <MudTh>Title</MudTh>
+        <MudTh>Description</MudTh>
+        <MudTh>Author</MudTh>
+        <MudTh>Type</MudTh>
+    </HeaderContent>
+    <RowTemplate>
+        <MudTd DataLabel="Title">@context.Title</MudTd>
+        <MudTd DataLabel="Description">@context.Description</MudTd>
+        <MudTd DataLabel="Author">@context.Author</MudTd>
+        <MudTd DataLabel="Type">@context.Type</MudTd>
+    </RowTemplate>
+</MudTable>
 
-Welcome to your new app.
+@code{
+    private BookService _bookService;
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+    private List<Book> Books { get; set; } = new();
+    private bool _loading = false;
+
+    protected override async Task OnInitializedAsync()
+    {
+        _bookService = new();
+        Books = await _bookService.GetAllBooks();
+    }
+
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if(!_loginState.IsUserLoggedIn()) _nav.NavigateTo("/login");
+    }        
+}
