--- a/TO-BDD/Shared/NavMenu.razor
+++ b/TO-BDD/Shared/NavMenu.razor
@@ -19,6 +19,11 @@
                 <MudIcon Icon="@Icons.Filled.Book" Style ="margin-right: 5px"/> Recomended Books
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Cart" Match="NavLinkMatch.All">
+                <MudIcon Icon="@Icons.Filled.ShoppingCart" Style="margin-right: 5px" /> Cart
+            </NavLink>
+        </div>
 @*        <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
